Fixed toast visibility bug and handled browser refresh bugs. Added emojis to title.

--- a/assets/style.css
+++ b/assets/style.css
@@ -43,9 +43,8 @@ h2 {
 }
 
 #toast {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
+    flex-direction: column;
+    justify-content: center;
 }
 
 @media screen and (max-width: 600px) {
